# TheyChat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_ssl.sh  message.h  message_test.c
files/: sample_text.txt
include/: message.h
include/client/: client.h  client_data.h  command.h  state_handler_utils.h  states_fsm.h
include/client/chat_state/: chat.h  chat_entries.h  ui.h  ui_data.h
include/client/chat_state/ui/: chat_window.h  header_window.h  input_window.h  log_window.h
include/client/command/: command.h  command_implementations.h  command_processor.h  server_command_handler.h
include/client/server_task/: server_task_handler.h
include/client/ui/: chat_entries.h  chat_entry_types.h  input_handler.h  ui.h  ui_data.h
include/client/ui/ui_windows/: chat_window.h  header_window.h  input_window.h  log_window.h
include/common/: application_states.h  command_types.h  constants.h  file.h  linked_list.h  task_types.h  they_chat_error.h
include/common/collections/: linked_list.h
include/common/messages/: client_message.h  command_message.h  file_message.h  message.h  message_types.h  seq_message.h  status_message.h  user_message.h
include/common/net/: endian.h  file_transfer.h  net_communication.h  net_connection.h  net_error.h  net_primitives.h  net_stream.h  network.h  socket.h
include/common/net/serialization/: net_message_serializer.h  net_serializer.h
include/common/utils/: string_list.h  string_list_transferring.h  string_utils.h
include/messages/: file_message.h  message.h  message_types.h  messages.h  status_message.h  user_message.h
include/net/: net_communication.h  net_error.h  net_stream.h
include/net/serialization/: net_message_serializer.h
include/server/: broadcast_message.h  client.h  client_handler.h  client_list.h  server.h  server_state_data.h  shared_file.h  shared_file_list.h  state_handler_utils.h
include/server/command/: command_handler_data.h  command_processor.h
include/server/task/: task_handler_data.h
libs/: CMakeLists.txt
src/: message.c  message_serializer.c  message_serializer.h  message_types.h
src/client/: client.c  client_data.c  states_fsm.c
src/client/command/: command.c  command_implementations.c  command_processor.c  server_command_handler.c
src/client/command/command_implementations/: connect_handler.c  quit_handler.c  users_handler.c
src/client/command/commands/: connect_handler.c  disconnect_handler.c  download_handler.c  files_handler.c  quit_handler.c  remove_handler.c  upload_handler.c  users_handler.c
src/client/server_task/: server_task_handler.c
src/client/server_task/tasks/: server_task_download_file.c  server_task_files.c  server_task_remove_file.c  server_task_upload_file.c  server_task_users.c
src/client/state_handlers/: state_chat.c  state_connect.c  state_disconnect.c  state_login.c  state_offline.c  state_queue.c  state_quit.c
src/client/state_handlers/chat_state/: chat.c  chat_entries.c  state_chat.c  ui.c
src/client/state_handlers/chat_state/ui_windows/: chat_window.c  header_window.c  input_window.c  log_window.c
src/client/ui/: chat_entries.c  chat_entry_types.c  input_handler.c  terminal_resize.c  ui.c
src/client/ui/ui_windows/: chat_window.c  header_window.c  input_window.c  log_window.c
src/common/: application_states.c  file.c  linked_list.c  task_types.c  they_chat_error.c
src/common/collections/: linked_list.c
src/common/messages/: client_message.c  command_message.c  file_message.c  message.c  messages_types.c  seq_message.c  status_message.c  user_message.c
src/common/net/: endian.c  file_transfer.c  net_communication.c  net_connection.c  net_error.c  net_stream.c  network.c
src/common/net/net_primitives/: ssl_primitives.c  standard_primitives.c
src/common/net/network_impl/: network.c  network_ssl.c
src/common/net/primitives_impl/: ssl_primitives.c  standard_primitives.c
src/common/net/serialization/: net_message_serializer.c  net_serializer.c
src/common/string/: string_list.c  utils.c
src/common/utils/: string_list.c  string_list_transferring.c  string_utils.c
src/messages/: client_message.c  file_message.c  message.c  messages_types.c  status_message.c  user_message.c  user_message.h
src/net/: net_communication.c  net_error.c  net_stream.c
src/net/serialization/: net_message_serializer.c  net_serializer.c
src/server/: broadcast_message.c  client.c  client_handler.c  client_list.c  server.c  server_main.c  server_state_data.c  shared_file.c  shared_file_list.c
src/server/command/: command_processor.c  command_request_handler.c
src/server/state_handlers/: state_chat.c  state_connect.c  state_disconnect.c  state_login.c
src/server/task/: task_request_handler.c
src/server/task/tasks/: server_task_download_file.c  server_task_files.c  server_task_remove_file.c  server_task_upload_file.c  server_task_users.c
src/tests/: client_list_tests.c  file_message_serialization_tests.c  ncursesui.c  user_chat_message_serialization_tests.c
src/tests/common/: file_message_serialization_tests.c  linked_list_tests.c  string_list_tests.c  user_chat_message_serialization_tests.c
src/tests/common/file_transferring/: file_transfer_client.c  file_transfer_server.c
src/tests/communication/: client.c  communication_test_client.c  communication_test_server.c  server.c  thread_test.c
src/tests/serialization/: file_message_serialization_tests.c  user_chat_message_serialization_tests.c
src/tests/server/: client_list_tests.c
